[package]
name = "wimcp"
version = "0.0.0"
edition = "2021"
authors = ["Adriiii"]
description = "Wizards in Memory Cache Provider"
readme = "README.md"
repository = "https://github.com/AdrisGithub/wimcp"
license = "GPL-2.0-or-later"
documentation = "https://docs.rs/wimcp"
exclude = ["src/resources/", ".github/", "sonar-project.properties"]


[dependencies]
wjp = "1.1.2"
wimcm = "0.2.3"
wbdl = "1.1.0"